src/screens/EventDashboard/EventDashboard.module.css
.mainpage {
  display: flex;
  flex-direction: row;
}

.toporgloc {
  padding-top: 8px;
  font-size: 16px;
}
.sidebar {
  z-index: 0;
  padding-top: 5px;
  margin: 0;
  height: 100%;
}
.sidebar:after {
  content: '';
  background-color: #f7f7f7;
  position: absolute;
  width: 2px;
  height: 600px;
  top: 10px;
  left: 94%;
  display: block;
}
.sidebarsticky {
  padding-left: 30px;
}
.sidebarsticky > p {
  margin-top: -10px;
  width: 90%;
}

.description {
  word-wrap: break-word;
}

.titlename {
  color: #707070;
  font-weight: 600;
  font-size: 20px;
  margin-bottom: 30px;
  padding-bottom: 5px;
  width: 26%;
}
.tagdetailsGreen > button {
  background-color: #31bb6b;
  color: white;
  outline: none;
  cursor: pointer;
  transition: transform 0.2s, box-shadow 0.2s;
  border: none;
  border-radius: 5px;
  margin-top: -12px;
  margin-bottom: 10px;
  margin-right: 30px;
  padding-right: 20px;
  padding-left: 20px;
  padding-top: 5px;
  padding-bottom: 5px;
}
.mainpageright > hr {
  margin-top: 20px;
  width: 100%;
  margin-left: -15px;
  margin-right: -15px;
  margin-bottom: 20px;
}
.justifysp {
  display: flex;
  justify-content: space-between;
}
.org_about_img {
  margin-top: 0px;
  margin-bottom: 30px;
  border-radius: 5px;
  max-width: 100%;
  height: auto;
  width: 90%;
}
.invitebtn {
  border: 1px solid #e8e5e5;
  box-shadow: 0 2px 2px #e8e5e5;
  border-radius: 5px;
  background-color: #31bb6b;
  width: 20%;
  height: 40px;
  font-size: 16px;
  color: white;
  outline: none;
  font-weight: 600;
  cursor: pointer;
  transition: transform 0.2s, box-shadow 0.2s;
}
.flexdir {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  border: none;
}

.logintitleinvite {
  color: #707070;
  font-weight: 600;
  font-size: 20px;
  margin-bottom: 20px;
  padding-bottom: 5px;
  border-bottom: 3px solid #31bb6b;
  width: 40%;
}

.cancel > i {
  margin-top: 5px;
  transform: scale(1.2);
  cursor: pointer;
  color: #707070;
}

.greenregbtn {
  margin: 1rem 0 0;
  margin-top: 10px;
  border: 1px solid #e8e5e5;
  box-shadow: 0 2px 2px #e8e5e5;
  padding: 10px 10px;
  border-radius: 5px;
  background-color: #31bb6b;
  width: 100%;
  font-size: 16px;
  color: white;
  outline: none;
  font-weight: 600;
  cursor: pointer;
  transition: transform 0.2s, box-shadow 0.2s;
  width: 100%;
}

.loader,
.loader:after {
  border-radius: 50%;
  width: 10em;
  height: 10em;
}
.loader {
  margin: 60px auto;
  margin-top: 35vh !important;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
  border-left: 1.1em solid #febc59;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}
@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.cardContainer {
  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.05);
}

.dashboardIcon {
  font-size: 50px;
  color: #31bb6b;
}

.counterNumber {
  font-size: 24px;
  margin-bottom: 0rem !important;
}

.counterHead {
  color: #565658;
  font-size: 15px;
  margin-bottom: 0rem !important;
}

